--- a/OGPC Project Prototyping/Assembly-CSharp.csproj
+++ b/OGPC Project Prototyping/Assembly-CSharp.csproj
@@ -294,13 +294,13 @@
  <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.12f1/Editor/Data/Managed/UnityEditor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Analytics.Editor">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/PackageCache/com.unity.analytics@3.3.5/Unity.Analytics.Editor.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/PackageCache/com.unity.analytics@3.3.5/Unity.Analytics.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Analytics.Tracker">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/PackageCache/com.unity.analytics@3.3.5/Unity.Analytics.Tracker.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/PackageCache/com.unity.analytics@3.3.5/Unity.Analytics.Tracker.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Analytics.StandardEvents">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/PackageCache/com.unity.analytics@3.3.5/AnalyticsStandardEvents/Unity.Analytics.StandardEvents.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/PackageCache/com.unity.analytics@3.3.5/AnalyticsStandardEvents/Unity.Analytics.StandardEvents.dll</HintPath>
  </Reference>
  <Reference Include="netstandard">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.12f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
@@ -648,100 +648,100 @@
  <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.12f1/Editor/Data/NetStandard/compat/2.0.0/shims/netfx/System.Xml.Serialization.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Timeline.Editor">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Monetization">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEngine.Monetization.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEngine.Monetization.dll</HintPath>
  </Reference>
  <Reference Include="com.unity.multiplayer-hlapi.Editor">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/com.unity.multiplayer-hlapi.Editor.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/com.unity.multiplayer-hlapi.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.VSCode.Editor">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Advertisements">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEngine.Advertisements.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEngine.Advertisements.dll</HintPath>
  </Reference>
  <Reference Include="Unity.2D.SpriteShape.Editor">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.2D.SpriteShape.Editor.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.2D.SpriteShape.Editor.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Purchasing">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEngine.Purchasing.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEngine.Purchasing.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.Purchasing">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEditor.Purchasing.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEditor.Purchasing.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro.Editor">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.2D.Path.Editor">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.2D.Path.Editor.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.2D.Path.Editor.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.UI">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Timeline">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
  </Reference>
  <Reference Include="Unity.CollabProxy.Editor">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
  </Reference>
  <Reference Include="com.unity.multiplayer-weaver.Editor">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/com.unity.multiplayer-weaver.Editor.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/com.unity.multiplayer-weaver.Editor.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.XR.LegacyInputHelpers">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEngine.XR.LegacyInputHelpers.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEngine.XR.LegacyInputHelpers.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Rider.Editor">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Mathematics">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.Mathematics.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.Mathematics.dll</HintPath>
  </Reference>
  <Reference Include="Unity.InternalAPIEngineBridge.001">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.InternalAPIEngineBridge.001.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.InternalAPIEngineBridge.001.dll</HintPath>
  </Reference>
  <Reference Include="Unity.2D.Sprite.Editor">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.2D.Common.Runtime">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.2D.Common.Runtime.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.2D.Common.Runtime.dll</HintPath>
  </Reference>
  <Reference Include="Unity.2D.Tilemap.Editor">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.2D.Tilemap.Editor.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.2D.Tilemap.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.2D.SpriteShape.Runtime">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.2D.SpriteShape.Runtime.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.2D.SpriteShape.Runtime.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.SpatialTracking">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEditor.SpatialTracking.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEditor.SpatialTracking.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.SpatialTracking">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEngine.SpatialTracking.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEngine.SpatialTracking.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Mathematics.Editor">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.Mathematics.Editor.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.Mathematics.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
  </Reference>
  <Reference Include="Unity.2D.Common.Editor">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.2D.Common.Editor.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.2D.Common.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Analytics.DataPrivacy">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.XR.LegacyInputHelpers">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEditor.XR.LegacyInputHelpers.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEditor.XR.LegacyInputHelpers.dll</HintPath>
  </Reference>
  <Reference Include="Unity.InternalAPIEditorBridge.001">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.InternalAPIEditorBridge.001.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/Unity.InternalAPIEditorBridge.001.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.UI">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
  </Reference>
  <Reference Include="com.unity.multiplayer-hlapi.Runtime">
- <HintPath>C:/Users/jwolf/OneDrive/Documents/Namespace Null/TraversalVer2/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/com.unity.multiplayer-hlapi.Runtime.dll</HintPath>
+ <HintPath>C:/Users/Admin/Desktop/Namespace Null/TraversalVer2/OGPC Project Prototyping/Library/ScriptAssemblies/com.unity.multiplayer-hlapi.Runtime.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
